external-crates/move/crates/move-compiler/tests/move_2024/ide_mode/control_exp_autocomplete@ide.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
note[I15004]: IDE missing match arms
 = Compiler Error -- no location information for error:
     Missing arms: '_'

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/macros.move:72:16
   │
72 │         return b"0".to_string()
   │                ^^^^ String value: b"0"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:13:34
   │
13 │ const EDenominator: vector<u8> = b"Quotient specified with a zero denominator";
   │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified with a zero denominator"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:17:5
   │
17 │     b"Quotient specified is too small, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too small, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:21:5
   │
21 │     b"Quotient specified is too large, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too large, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:24:31
   │
24 │ const EOverflow: vector<u8> = b"Overflow from an arithmetic operation";
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Overflow from an arithmetic operation"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq64_64.move:27:37
   │
27 │ const EDivisionByZero: vector<u8> = b"Division by zero";
   │                                     ^^^^^^^^^^^^^^^^^^^ String value: b"Division by zero"

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/string.move:127:21
    │
127 │ #[deprecated(note = b"Use `std::string::as_bytes` instead.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Use `std::string::as_bytes` instead."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/string.move:130:21
    │
130 │ #[deprecated(note = b"Use `std::string::substring` instead.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Use `std::string::substring` instead."

error[E04007]: incompatible types
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:15:13
   │
14 │     public fun test_if(a: A) {
   │                           - Given: 'a::m::A'
15 │         if (a.
   │             ^^
   │             │
   │             Invalid if condition
   │             Expected: 'bool'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:15:14
   │
15 │         if (a.
   │              ^ Possible dot names: 'a::m::test_if' or 'x'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:16:5
   │
16 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:18:5
   │
18 │     public fun test_while() {
   │     ^^^^^^
   │     │
   │     Unexpected 'public'
   │     Expected ';'

error[E04007]: incompatible types
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:20:16
   │
19 │         let n = (42 as u32);
   │                        --- Given: 'u32'
20 │         while (n.
   │                ^^
   │                │
   │                Invalid while condition
   │                Expected: 'bool'

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:20:17
   │
20 │         while (n.
   │                 ^ Possible dot names: 'std::u32::bitwise_not', 'std::u32::diff', 'std::u32::divide_and_round_up', 'std::u32::do', 'std::u32::do_eq', 'std::u32::max', 'std::u32::min', 'std::u32::pow', 'std::u32::range_do', 'std::u32::range_do_eq', 'std::u32::sqrt', 'std::u32::to_string', 'std::u32::try_as_u16', or 'std::u32::try_as_u8'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:21:5
   │
21 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:23:5
   │
23 │     public fun test_match(n: u64) {
   │     ^^^^^^
   │     │
   │     Unexpected 'public'
   │     Expected ';'

error[E04036]: non-exhaustive pattern
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:24:16
   │
24 │         match (n.
   │                ^^ Pattern '_' not covered

note[I15001]: IDE dot autocomplete
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:24:17
   │
24 │         match (n.
   │                 ^ Possible dot names: 'std::u64::bitwise_not', 'std::u64::diff', 'std::u64::divide_and_round_up', 'std::u64::do', 'std::u64::do_eq', 'std::u64::max', 'std::u64::min', 'std::u64::pow', 'std::u64::range_do', 'std::u64::range_do_eq', 'std::u64::sqrt', 'std::u64::to_string', 'std::u64::try_as_u16', 'std::u64::try_as_u32', or 'std::u64::try_as_u8'

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:25:5
   │
25 │     }
   │     ^
   │     │
   │     Unexpected '}'
   │     Expected an identifier or a decimal number

error[E01002]: unexpected token
   ┌─ tests/move_2024/ide_mode/control_exp_autocomplete.move:28:1
   │
28 │ 
   │ ^
   │ 
   │ Unexpected end-of-file
   │ Expected ';'

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:13:34
   │
13 │ const EDenominator: vector<u8> = b"Quotient specified with a zero denominator";
   │                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified with a zero denominator"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:17:5
   │
17 │     b"Quotient specified is too small, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too small, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:21:5
   │
21 │     b"Quotient specified is too large, and is outside of the supported range";
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Quotient specified is too large, and is outside of the supported range"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:24:31
   │
24 │ const EOverflow: vector<u8> = b"Overflow from an arithmetic operation";
   │                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Overflow from an arithmetic operation"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/uq32_32.move:27:37
   │
27 │ const EDivisionByZero: vector<u8> = b"Division by zero";
   │                                     ^^^^^^^^^^^^^^^^^^^ String value: b"Division by zero"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:61:15
   │
61 │     bytes == &b"bool" ||
   │               ^^^^^^^ String value: b"bool"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:62:19
   │
62 │         bytes == &b"u8" ||
   │                   ^^^^^ String value: b"u8"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:63:19
   │
63 │         bytes == &b"u16" ||
   │                   ^^^^^^ String value: b"u16"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:64:19
   │
64 │         bytes == &b"u32" ||
   │                   ^^^^^^ String value: b"u32"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:65:19
   │
65 │         bytes == &b"u64" ||
   │                   ^^^^^^ String value: b"u64"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:66:19
   │
66 │         bytes == &b"u128" ||
   │                   ^^^^^^^ String value: b"u128"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:67:19
   │
67 │         bytes == &b"u256" ||
   │                   ^^^^^^^ String value: b"u256"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:68:19
   │
68 │         bytes == &b"address" ||
   │                   ^^^^^^^^^^ String value: b"address"

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:135:21
    │
135 │ #[deprecated(note = b"Renamed to `with_defining_ids` for clarity.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `with_defining_ids` for clarity."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:140:21
    │
140 │ #[deprecated(note = b"Renamed to `with_original_ids` for clarity.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `with_original_ids` for clarity."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:145:21
    │
145 │ #[deprecated(note = b"Renamed to `as_string` for consistency.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `as_string` for consistency."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:150:21
    │
150 │ #[deprecated(note = b"Renamed to `address_string` for consistency.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `address_string` for consistency."

note[I15007]: IDE string value
    ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/type_name.move:155:21
    │
155 │ #[deprecated(note = b"Renamed to `module_string` for consistency.")]
    │                     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Renamed to `module_string` for consistency."

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/unit_test.move:24:28
   │
24 │         std::debug::print(&b"Assertion failed:".to_string());
   │                            ^^^^^^^^^^^^^^^^^^^^ String value: b"Assertion failed:"

note[I15007]: IDE string value
   ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/unit_test.move:26:28
   │
26 │         std::debug::print(&b"!=".to_string());
   │                            ^^^^^ String value: b"!="

note[I15007]: IDE string value
  ┌─ /Users/cgswords/sui-main/external-crates/move/crates/move-stdlib/sources/fixed_point32.move:8:16
  │
8 │         note = b"Use `std::uq32_32` instead. If you need to convert from a `FixedPoint32` to a `UQ32_32`, you can use the `std::fixed_point32::get_raw_value` with `std::uq32_32::from_raw_value`.",
  │                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ String value: b"Use `std::uq32_32` instead. If you need to convert from a `FixedPoint32` to a `UQ32_32`, you can use the `std::fixed_point32::get_raw_value` with `std::uq32_32::from_raw_value`."
